# kanguros.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Custom CSS print.md  README.md  TEST.html  about.html  all_posts.html  all_posts2.html  all_posts3.html  archive.html  article.html  articles.html  authors.html  categories.html  custom_linter.md  error.html  homepage.html  index.html  index2.html  index3.html  markdown_extension_mermaid.py  master_prompt.md  note.html  note2.html  notes.html  notes2.html  pelicanconf.py  posts.html  posts2.html  posts3.html  private.html  privates.html  publishconf.py  pyproject.toml  resume.html  sitemap.xml  tags.html  tasks.py  (+1 more)
.github/workflows/: build.yml
about/: index.html
archive/: index.html
article/: behind-curtains.html  keywords-with-chatgpt.html  markdown-in-pelican.html  variables-and-parameters-in-azure-pipeline.html  welcome.html
author/: kamil-urbanek.html  kamil-urbanek2.html
category/: general.html  markdown.html  posts.html
category/ai/: index.html
category/personal/: index.html
category/posts/: index.html
category/resume/: index.html
category/webdev/: index.html
code/: pytests_requests.py  shadowing_policies.py
code/azure_repos/: script.py
code/pytest_requests/: extract.py  mock_file.txt  (+1 more)
cv/: index.html
drafts/: diet-for-woman-by-chatgpt.html  i-do-not.html  word-file-modifier.html
gemini-scribe/: AGENTS.md  example-prompts.json
markdown_extension/: inline_mermaid.py
note/: ai-prompts.html  azure-devops-class.html  creating-system-prompts.html  dynamic-click.html  pacli-wrapper.html  poetry-tree.html  pytest-cheatsheet.html  requests-using-pytest.html  usage-of-ai.html
notes/: ai-prompts.html  azure-devops-class.html  diet-for-woman-by-chatgpt.html  dynamic-click.html  i-do-not.html  index.html  pacli-wrapper.html  poetry-tree.html  requests-using-pytest.html  usage-of-ai.html  word-file-modifier.html
post/: ai-prompts.html  azure-devops-class.html  behind-curtains.html  creating-system-prompts.html  dynamic-click.html  keywords-with-chatgpt.html  markdown-in-pelican.html  pacli-wrapper.html  poetry-tree.html  pytest-cheatsheet.html  requests-using-pytest.html  usage-of-ai.html  variables-and-parameters-in-azure-pipeline.html  welcome.html  word-file-modifier.html
posts/: ai-prompts.html  azure-devops-class.html  behind-curtains.html  draft-i-do-not.html  dynamic-click.html  i-do-not.html  index.html  it-keywords-with-chatgpt.html  keywords-with-chatgpt.html  markdown-in-pelican.html  pacli-wrapper.html  poetry-tree.html  requests-using-pytest.html  resume.html  usage-of-ai.html  variables-and-parameters-in-azure-pipeline.html  welcome.html  word-file-modifier.html
private/: appweb-on-gcp.html  diet-for-woman-by-chatgpt.html  dieta-dla-5-latki.html  i-do-not.html  index.html  jadlospis.html  poetry-tree.html  word-file-modifier.html
prompts/: index.html
raw_notes/: header_image_prompts.md  photo-1572721546624-05bf65ad7679.avif  photo-1574405345169-f45c7d66480e.avif
resume/: index.html
tag/: ai.html  azure-devops.html  azure_pipeline.html  cheatsheet.html  click.html  graph.html  index.html  llm.html  markdown.html  notes.html  pacli.html  parameters.html  pelican.html  personal.html  poetry.html  prompt.html  prompts.html  pwv.html  pytest.html  python.html  requests.html  variables.html  webdev.html
tags/: ai.html  azure-devops.html  azure_pipeline.html  click.html  graph.html  index.html  markdown.html  notes.html  pacli.html  parameters.html  pelican.html  personal.html  poetry.html  prompts.html  pwv.html  pytest.html  python.html  requests.html  variables.html  webdev.html
theme/: README.md
(+325 files in other folders)
