[tool.poetry]
name = "kanguros.github.io"
version = "0.2.3"
description = ""
authors = ["Kamil Urbanek <urbanek.kamil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = { extras = ["markdown"], version = "^4.9" }
typogrify = "^2.0"
pymdown-extensions = "^10"
invoke = "^2.1"
livereload = "^2"

pelican-yaml-metadata = "^2.1.2"
pelican-similar-posts = "^1.0.0"
pelican-neighbors = "^1.2.0"
pelican-sitemap = "^1.1.0"
pelican-readtime = "^0.2.0"
pelican-minify = "^2.0.0"
Pygments = "^2.17.1"
pre-commit = "^3.8.0"
pelican-jinja-filters = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
