[tool.poetry]
name = "kanguros.github.io"
version = "0.2.3"
description = ""
authors = ["Kamil Urbanek <urbanek.kamil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = { extras = ["markdown"], version = "^4.11" }
typogrify = "^2.0"
Pygments = "^2.17"
pymdown-extensions = "^10"
pelican-yaml-metadata = "^2.1"
#pelican-similar-posts = "^1.0"
pelican-neighbors = "^1.2"
pelican-sitemap = "^1.1"
pelican-minify = "^2.0.0"
pelican-jinja-filters = "^2.1.1"
pre-commit = "^3.8.0"
invoke = "^2.1"
livereload = "^2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py",
  "tasks.py",
  "pelicanconf.py",
  "publishconf.py"
]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle error
  "F",      # flake8 error
  "A",      # builtin shadowing
  "B",      # flake8 bugbear
  "BLE",    # aboid bare excepts
  "C4",     # simplify comprehensions
  "DTZ",    # datetime errors
  "FBT",    # avoid boolean trap
  "G",      # logging format
  "I",      # isort imports
  "N",      # conform to PEP8 naming rules
  "RET",    # return values
  "S",      # bandit
  "TRY",    # exceptions antipatterns
  "UP",     # upgade syntax
  "W",      # pycodestyle warning
  "YTT",    # wrong usage of sys.info
]
ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use of `assert` detected
    "S101"
]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
